@@ -53,17 +53,4 @@ public class DataNode extends LeafNode {
     public DataNode clone() {
         return (DataNode) super.clone();
     }
-
-    /**
-     Create a new DataNode from HTML encoded data.
-     @param encodedData encoded data
-     @param baseUri base URI
-     @return new DataNode
-     @deprecated Unused, and will be removed in 1.15.1.
-     */
-    @Deprecated
-    public static DataNode createFromEncoded(String encodedData, String baseUri) {
-        String data = Entities.unescape(encodedData);
-        return new DataNode(data);
-    }
 }
